# envy-tui

./: Cargo.toml  LICENSE  README.md  envy-tui.desktop
.github/workflows/: github-release.yml  update_aur.yml
src/: app.rs  envycontrol.rs  main.rs  theme.rs  ui.rs
