[package]
name = "envy-tui"
version = "0.1.3"
edition = "2021"
description = "TUI manager for EnvyControl - GPU switching for Nvidia Optimus laptops"
authors = ["Tassio"]
license = "MIT"

[dependencies]
ratatui = "0.30"
crossterm = "0.29"
anyhow = "1.0"

[package.metadata.deb]
maintainer = "Tassio Virginio <tassio.virginio@gmail.com>"
copyright = "2026, Tassio Virginio"
license-file = ["LICENSE", "4"]
extended-description = """
TUI manager for EnvyControl - GPU switching for Nvidia Optimus laptops
"""
depends = "$auto"
section = "utils"
priority = "optional"
assets = [
    ["target/release/envy-tui", "usr/bin/", "755"],
    ["README.md", "usr/share/doc/envy-tui/README.md", "644"],
    ["envy-tui-logo.png", "usr/share/icons/hicolor/256x256/apps/envy-tui.png", "644"],
    ["envy-tui.desktop", "usr/share/applications/envy-tui.desktop", "644"],
]

[profile.release]
strip = true        # Automatically strip symbols from the binary.
opt-level = "z"     # Optimize for size.
lto = true          # Enable LTO
codegen-units = 1   # Use a single codegen for size optimization
panic = "abort"     # Remove traceback information